chore: add codeeeeeeeee to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,7 @@ build/
 # Dependencies (each service has its own go.mod)
 # Don't commit downloaded modules
 
+# Development folder with working code
+codeeeeeeeee/
+codeeeeeeeeee/
+
