feat: add generated proto files to repository
Added all generated Go proto files:
- common/v1
- auth/v1
- user/v1
- workspace/v1
- request/v1
- notification/v1
- floorplan/v1
- scene/v1
- branch/v1
- ai/v1
- compliance/v1

Updated .gitignore to keep generated files in repo

--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,8 @@ Desktop.ini
 *.log
 logs/
 
-# Generated
-shared/gen/
+# Generated (keep proto generated files in repo for easier development)
+# shared/gen/
 
 # Test
 coverage.out
