fix: update Docker configs for local deployment
- Fix Dockerfiles paths (remove services/ prefix)
- Update docker-compose.yml with correct DB env vars (DB_HOST, DB_PORT)
- Auth, User, Notification services now connect to PostgreSQL correctly

Infrastructure running:
- PostgreSQL x6 (auth, user, workspace, request, floorplan, compliance)
- MongoDB (scenes, branches, ai)
- Redis (caching, sessions)
- MinIO (object storage)

D1 Services running:
- API Gateway (:8080)
- Auth Service (:50051)
- User Service (:50052)
- Notification Service (:50060)

--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,38 +1,56 @@
-# Build stage
+# =============================================================================
+# Auth Service - Dockerfile
+# =============================================================================
+# Multi-stage build for Auth Service
+#
+# Build: docker build -t granula-auth-service -f auth-service/Dockerfile .
+# Run:   docker run -p 50051:50051 granula-auth-service
+# =============================================================================
+
+# Stage 1: Build
 FROM golang:1.23-alpine AS builder
 
 WORKDIR /app
 
 # Install dependencies
-RUN apk add --no-cache git
+RUN apk add --no-cache git ca-certificates tzdata
 
 # Copy shared module first
-COPY shared/ /app/shared/
+COPY shared/ ./shared/
 
 # Initialize shared module
 WORKDIR /app/shared
 RUN go mod tidy
 
 # Copy service module
-WORKDIR /app/services/auth-service
-COPY services/auth-service/go.mod ./
+WORKDIR /app/auth-service
+COPY auth-service/go.mod auth-service/go.sum* ./
 RUN go mod download || true
 
 # Copy source code
-COPY services/auth-service/ ./
+COPY auth-service/ ./
 
 # Tidy and build
 RUN go mod tidy
-RUN CGO_ENABLED=0 GOOS=linux go build -o /auth-service ./cmd/main.go
+RUN CGO_ENABLED=0 GOOS=linux go build -ldflags="-w -s" -o /auth-service ./cmd/server/main.go
 
-# Runtime stage
+# Stage 2: Runtime
 FROM alpine:3.19
 
-RUN apk add --no-cache ca-certificates tzdata
+# Add non-root user
+RUN apk --no-cache add ca-certificates tzdata && \
+    addgroup -g 1000 granula && \
+    adduser -u 1000 -G granula -s /bin/sh -D granula
 
 WORKDIR /app
 
+# Copy binary
 COPY --from=builder /auth-service .
+
+# Set ownership
+RUN chown -R granula:granula /app
+
+USER granula
 
 EXPOSE 50051
 
