--- a/notification-service/Dockerfile
+++ b/notification-service/Dockerfile
@@ -1,39 +1,37 @@
-# Build stage
+# =============================================================================
+# Notification Service - Dockerfile
+# =============================================================================
+# Multi-stage build for Notification Service
+# =============================================================================
+
 FROM golang:1.23-alpine AS builder
 
 WORKDIR /app
 
-# Install dependencies
-RUN apk add --no-cache git
+RUN apk add --no-cache git ca-certificates tzdata
 
-# Copy shared module first
-COPY shared/ /app/shared/
-
-# Initialize shared module
+COPY shared/ ./shared/
 WORKDIR /app/shared
 RUN go mod tidy
 
-# Copy service module
-WORKDIR /app/services/notification-service
-COPY services/notification-service/go.mod ./
+WORKDIR /app/notification-service
+COPY notification-service/go.mod notification-service/go.sum* ./
 RUN go mod download || true
 
-# Copy source code
-COPY services/notification-service/ ./
-
-# Tidy and build
+COPY notification-service/ ./
 RUN go mod tidy
-RUN CGO_ENABLED=0 GOOS=linux go build -o /notification-service ./cmd/main.go
+RUN CGO_ENABLED=0 GOOS=linux go build -ldflags="-w -s" -o /notification-service ./cmd/main.go
 
-# Runtime stage
 FROM alpine:3.19
 
-RUN apk add --no-cache ca-certificates tzdata
+RUN apk --no-cache add ca-certificates tzdata && \
+    addgroup -g 1000 granula && \
+    adduser -u 1000 -G granula -s /bin/sh -D granula
 
 WORKDIR /app
-
 COPY --from=builder /notification-service .
+RUN chown -R granula:granula /app
 
+USER granula
 EXPOSE 50060
-
 CMD ["./notification-service"]
