--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ name: Deploy Granula API
 
 on:
   push:
-    branches: [main, develop, dev/shared]
+    branches: [main]
   pull_request:
     branches: [main]
 
@@ -120,7 +120,7 @@ jobs:
     name: Deploy to Production
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/dev/shared'
+    if: github.ref == 'refs/heads/main'
     environment: production
     
     steps:
