--- a/deploy/nginx/api.granula.conf
+++ b/deploy/nginx/api.granula.conf
@@ -1,15 +1,7 @@
 # =============================================================================
-# Nginx config for api.granula.raitokyokai.tech
-# =============================================================================
-# Copy to /etc/nginx/sites-available/ and symlink to sites-enabled
+# Nginx config for api.granula.raitokyokai.tech (with SSL)
 # =============================================================================
 
-upstream api_backend {
-    server 127.0.0.1:3001;
-    keepalive 32;
-}
-
-# HTTP → HTTPS redirect
 server {
     listen 80;
     listen [::]:80;
@@ -24,73 +16,28 @@ server {
     }
 }
 
-# Main HTTPS server
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
     server_name api.granula.raitokyokai.tech;
 
-    # SSL certificates
     ssl_certificate /etc/letsencrypt/live/api.granula.raitokyokai.tech/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/api.granula.raitokyokai.tech/privkey.pem;
-
-    ssl_session_timeout 1d;
-    ssl_session_cache shared:SSL:50m;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers off;
-
-    # Security headers
-    add_header Strict-Transport-Security "max-age=63072000" always;
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     client_max_body_size 50M;
 
-    # Health check
-    location /health {
-        proxy_pass http://api_backend;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";
-        access_log off;
-    }
-
-    # Swagger
-    location /swagger {
-        proxy_pass http://api_backend;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # API endpoints
-    location /api/ {
-        proxy_pass http://api_backend;
+    location / {
+        proxy_pass http://127.0.0.1:3001;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Connection "";
-        
         proxy_connect_timeout 30s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
-
-        # CORS
-        add_header Access-Control-Allow-Origin "*" always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization" always;
-
-        if ($request_method = OPTIONS) {
-            return 204;
-        }
-    }
-
-    # Root redirect
-    location / {
-        return 301 /swagger;
     }
 }
-
