--- a/deploy/nginx/api.granula.http.conf
+++ b/deploy/nginx/api.granula.http.conf
@@ -1,5 +1,7 @@
-# HTTP-only config for api.granula.raitokyokai.tech
-# Use this initially, then run certbot to get SSL
+# =============================================================================
+# Nginx config for api.granula.raitokyokai.tech (HTTP only - for initial certbot)
+# =============================================================================
+# После получения SSL сертификата certbot автоматически добавит HTTPS блок
 
 server {
     listen 80;
@@ -8,22 +10,6 @@ server {
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
-    }
-
-    location /health {
-        proxy_pass http://127.0.0.1:3001;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";
-        access_log off;
-    }
-
-    location /swagger {
-        proxy_pass http://127.0.0.1:3001;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location / {
@@ -38,4 +24,3 @@ server {
         proxy_read_timeout 60s;
     }
 }
-
