fix(docker): replace HTTP healthcheck with grpc_health_probe for gRPC services
- workspace-service, floorplan-service, scene-service, branch-service,
  ai-service, compliance-service, request-service now use grpc_health_probe
- Fixes 'unhealthy' status caused by HTTP healthchecks on gRPC ports
- grpc_health_probe properly checks gRPC health protocol endpoints

--- a/compliance-service/Dockerfile
+++ b/compliance-service/Dockerfile
@@ -39,10 +39,12 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
 # =============================================================================
 FROM alpine:3.19
 
-# Install runtime dependencies
+# Install runtime dependencies and grpc_health_probe
 RUN apk --no-cache add ca-certificates tzdata && \
     addgroup -g 1000 granula && \
-    adduser -u 1000 -G granula -s /bin/sh -D granula
+    adduser -u 1000 -G granula -s /bin/sh -D granula && \
+    wget -qO/bin/grpc_health_probe https://github.com/grpc-ecosystem/grpc-health-probe/releases/download/v0.4.28/grpc_health_probe-linux-amd64 && \
+    chmod +x /bin/grpc_health_probe
 
 # Set working directory
 WORKDIR /app
@@ -62,9 +64,9 @@ USER granula
 # Expose gRPC port
 EXPOSE 50058
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 \
-    CMD wget --no-verbose --tries=1 --spider http://localhost:50058/health || exit 1
+# Health check using gRPC health protocol
+HEALTHCHECK --interval=30s --timeout=5s --start-period=10s --retries=3 \
+    CMD ["/bin/grpc_health_probe", "-addr=:50058"]
 
 # Labels for container metadata
 LABEL maintainer="Granula Team"
