fix(services): add gRPC health checks to user/auth/notification services
- Add grpc_health_v1 registration to user-service, auth-service, notification-service
- Update Dockerfiles with grpc_health_probe for all gRPC services
- Fix api-gateway Dockerfile: EXPOSE 3001, add HTTP healthcheck with curl
- Standardize Go version to 1.22 across all Dockerfiles
- Add GOARCH=amd64 to all builds for consistent architecture

--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,10 +1,10 @@
 # =============================================================================
 # API Gateway - Dockerfile
 # =============================================================================
-# Multi-stage build for API Gateway
+# Multi-stage build for API Gateway (HTTP server)
 # =============================================================================
 
-FROM golang:1.23-alpine AS builder
+FROM golang:1.22-alpine AS builder
 
 WORKDIR /app
 
@@ -20,11 +20,12 @@ RUN go mod download || true
 
 COPY api-gateway/ ./
 RUN go mod tidy
-RUN CGO_ENABLED=0 GOOS=linux go build -ldflags="-w -s" -o /api-gateway ./cmd/main.go
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags="-w -s" -o /api-gateway ./cmd/main.go
 
 FROM alpine:3.19
 
-RUN apk --no-cache add ca-certificates tzdata && \
+# Install runtime dependencies
+RUN apk --no-cache add ca-certificates tzdata curl && \
     addgroup -g 1000 granula && \
     adduser -u 1000 -G granula -s /bin/sh -D granula
 
@@ -34,5 +35,10 @@ COPY api-gateway/docs/ ./docs/
 RUN chown -R granula:granula /app
 
 USER granula
-EXPOSE 8080
+EXPOSE 3001
+
+# Health check using HTTP (API Gateway is HTTP server)
+HEALTHCHECK --interval=30s --timeout=5s --start-period=10s --retries=3 \
+    CMD curl -f http://localhost:3001/health || exit 1
+
 CMD ["./api-gateway"]
