--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -4,7 +4,7 @@
 # Multi-stage build for User Service
 # =============================================================================
 
-FROM golang:1.23-alpine AS builder
+FROM golang:1.22-alpine AS builder
 
 WORKDIR /app
 
@@ -20,13 +20,16 @@ RUN go mod download || true
 
 COPY user-service/ ./
 RUN go mod tidy
-RUN CGO_ENABLED=0 GOOS=linux go build -ldflags="-w -s" -o /user-service ./cmd/main.go
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags="-w -s" -o /user-service ./cmd/main.go
 
 FROM alpine:3.19
 
+# Install runtime dependencies and grpc_health_probe
 RUN apk --no-cache add ca-certificates tzdata && \
     addgroup -g 1000 granula && \
-    adduser -u 1000 -G granula -s /bin/sh -D granula
+    adduser -u 1000 -G granula -s /bin/sh -D granula && \
+    wget -qO/bin/grpc_health_probe https://github.com/grpc-ecosystem/grpc-health-probe/releases/download/v0.4.28/grpc_health_probe-linux-amd64 && \
+    chmod +x /bin/grpc_health_probe
 
 WORKDIR /app
 COPY --from=builder /user-service .
@@ -34,4 +37,9 @@ RUN chown -R granula:granula /app
 
 USER granula
 EXPOSE 50052
+
+# Health check using gRPC health protocol
+HEALTHCHECK --interval=30s --timeout=5s --start-period=10s --retries=3 \
+    CMD ["/bin/grpc_health_probe", "-addr=:50052"]
+
 CMD ["./user-service"]
