--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -8,7 +8,7 @@
 # =============================================================================
 
 # Stage 1: Build
-FROM golang:1.23-alpine AS builder
+FROM golang:1.22-alpine AS builder
 
 WORKDIR /app
 
@@ -32,15 +32,17 @@ COPY auth-service/ ./
 
 # Tidy and build
 RUN go mod tidy
-RUN CGO_ENABLED=0 GOOS=linux go build -ldflags="-w -s" -o /auth-service ./cmd/server/main.go
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags="-w -s" -o /auth-service ./cmd/server/main.go
 
 # Stage 2: Runtime
 FROM alpine:3.19
 
-# Add non-root user
+# Install runtime dependencies and grpc_health_probe
 RUN apk --no-cache add ca-certificates tzdata && \
     addgroup -g 1000 granula && \
-    adduser -u 1000 -G granula -s /bin/sh -D granula
+    adduser -u 1000 -G granula -s /bin/sh -D granula && \
+    wget -qO/bin/grpc_health_probe https://github.com/grpc-ecosystem/grpc-health-probe/releases/download/v0.4.28/grpc_health_probe-linux-amd64 && \
+    chmod +x /bin/grpc_health_probe
 
 WORKDIR /app
 
@@ -53,5 +55,9 @@ RUN chown -R granula:granula /app
 USER granula
 
 EXPOSE 50051
+
+# Health check using gRPC health protocol
+HEALTHCHECK --interval=30s --timeout=5s --start-period=10s --retries=3 \
+    CMD ["/bin/grpc_health_probe", "-addr=:50051"]
 
 CMD ["./auth-service"]
