--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,24 +94,15 @@ jobs:
           ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} '
             cd /opt/granula/api
             
-            # Stop all containers
+            # Stop containers
             docker compose down --remove-orphans 2>/dev/null || true
             
-            # Remove old images to force complete rebuild
-            docker rmi $(docker images -q "api-*" 2>/dev/null) 2>/dev/null || true
+            # Build and start (--build forces rebuild)
+            docker compose --env-file .env up -d --build --force-recreate
             
-            # Clear Docker build cache
-            docker builder prune -f 2>/dev/null || true
-            
-            # Build fresh images
-            docker compose build --no-cache --pull
-            
-            # Start services
-            docker compose --env-file .env up -d
-            
-            sleep 60
+            sleep 90
             docker compose ps
-            curl -sf http://localhost:3001/ && echo "API Gateway is up!" || echo "Starting..."
+            curl -sf http://localhost:3001/health && echo "API Gateway is up!" || echo "Starting..."
           '
 
       - name: Health check
