--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -109,44 +109,31 @@ jobs:
           ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} '
             cd /opt/granula/api
             
-            echo "=== Running migrations ==="
+            echo "=== Running database migrations ==="
             
             # Wait for PostgreSQL containers to be ready
-            sleep 10
+            sleep 15
             
             # Workspace service migrations
-            echo "Applying workspace-service migrations..."
-            docker exec -i granula-postgres-workspace psql -U granula -d workspaces_db < workspace-service/migrations/000001_create_workspaces.up.sql 2>/dev/null || echo "Workspace migrations already applied or failed"
+            echo "[1/5] Applying workspace-service migrations..."
+            docker exec -i granula-postgres-workspace psql -U granula -d workspaces_db < workspace-service/migrations/000001_create_workspaces.up.sql 2>&1 || echo "Already applied or skipped"
             
-            # Auth service migrations (if exist)
-            if [ -f "auth-service/migrations/000001_create_users.up.sql" ]; then
-              echo "Applying auth-service migrations..."
-              docker exec -i granula-postgres-auth psql -U granula -d auth_db < auth-service/migrations/000001_create_users.up.sql 2>/dev/null || echo "Auth migrations already applied or failed"
-            fi
+            # FloorPlan service migrations
+            echo "[2/5] Applying floorplan-service migrations..."
+            docker exec -i granula-postgres-floorplan psql -U granula -d floorplans_db < floorplan-service/migrations/000001_create_floor_plans.up.sql 2>&1 || echo "Already applied or skipped"
             
-            # User service migrations (if exist)
-            if [ -f "user-service/migrations/000001_create_profiles.up.sql" ]; then
-              echo "Applying user-service migrations..."
-              docker exec -i granula-postgres-user psql -U granula -d users_db < user-service/migrations/000001_create_profiles.up.sql 2>/dev/null || echo "User migrations already applied or failed"
-            fi
+            # Compliance service migrations
+            echo "[3/5] Applying compliance-service migrations..."
+            docker exec -i granula-postgres-compliance psql -U granula -d compliance_db < compliance-service/migrations/000001_create_compliance_rules.up.sql 2>&1 || echo "Already applied or skipped"
             
-            # Request service migrations (if exist)
-            if [ -f "request-service/migrations/000001_create_requests.up.sql" ]; then
-              echo "Applying request-service migrations..."
-              docker exec -i granula-postgres-request psql -U granula -d requests_db < request-service/migrations/000001_create_requests.up.sql 2>/dev/null || echo "Request migrations already applied or failed"
-            fi
+            # Request service migrations
+            echo "[4/5] Applying request-service migrations..."
+            docker exec -i granula-postgres-request psql -U granula -d requests_db < request-service/migrations/000001_create_requests.up.sql 2>&1 || echo "Already applied or skipped"
             
-            # FloorPlan service migrations (if exist)
-            if [ -f "floorplan-service/migrations/000001_create_floorplans.up.sql" ]; then
-              echo "Applying floorplan-service migrations..."
-              docker exec -i granula-postgres-floorplan psql -U granula -d floorplans_db < floorplan-service/migrations/000001_create_floorplans.up.sql 2>/dev/null || echo "FloorPlan migrations already applied or failed"
-            fi
-            
-            # Compliance service migrations (if exist)
-            if [ -f "compliance-service/migrations/000001_create_rules.up.sql" ]; then
-              echo "Applying compliance-service migrations..."
-              docker exec -i granula-postgres-compliance psql -U granula -d compliance_db < compliance-service/migrations/000001_create_rules.up.sql 2>/dev/null || echo "Compliance migrations already applied or failed"
-            fi
+            # Verify tables exist
+            echo "[5/5] Verifying migrations..."
+            docker exec -i granula-postgres-workspace psql -U granula -d workspaces_db -c "\dt" 2>/dev/null | head -20
+            docker exec -i granula-postgres-floorplan psql -U granula -d floorplans_db -c "\dt" 2>/dev/null | head -20
             
             echo "=== Migrations completed ==="
           '
